--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,11 @@
 platform = atmelsam
 board = adafruit_trinket_m0
 framework = arduino
+build_flags = -fexceptions
+src_filter = +<*> -<test_main.cpp> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/>
+; build_unflags = -fno-exceptions
 
-[env:native]
-platform = native
-test_ignore = test_embedded
+
+; [env:native]
+; platform = native
+; test_ignore = test_embedded
