Adds in fix for rainbow rendering and grouping the sections into an array pre-manager build

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ board = adafruit_trinket_m0
 framework = arduino
 build_flags = -fexceptions
 src_filter = +<*> -<test_main.cpp> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/>
-; build_unflags = -fno-exceptions
+build_unflags = -fno-exceptions
 
 
 ; [env:native]
